# agent-evidence-vault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: aev.config.example.json
examples/basic/: CHANGELOG.md  README.md  app.py
examples/basic/evidence/: acceptance.txt  ci.txt  commands.jsonl  review_notes.json  risks.jsonl  tests.json
src/agent_evidence_vault/: __init__.py  api.py  checks.py  cli.py  config.py  models.py  parsers.py  reports.py  scanner.py  scoring.py  utils.py
tests/: test_api_cli.py  test_config.py  test_parsers.py  test_scanner.py  test_scoring_checks_reports.py
