[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evidence-vault"
version = "0.1.0"
description = "Offline audit evidence vaults for AI coding agent deliveries."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "agent-evidence-vault contributors"}]
keywords = ["ai", "developer-tools", "audit", "ci", "codex", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
aev = "agent_evidence_vault.cli:main"
agent-evidence-vault = "agent_evidence_vault.cli:main"

[project.urls]
Homepage = "https://github.com/yanqr213/agent-evidence-vault"
Issues = "https://github.com/yanqr213/agent-evidence-vault/issues"

[tool.setuptools.packages.find]
where = ["src"]
